--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
       padding: 16px;
     }
 
+    body.play-view-active .app {
+      max-width: none;
+      margin: 0;
+      min-height: 100vh;
+      padding: 0;
+    }
+
+    body.play-view-active .brand-strip {
+      display: none;
+    }
+
     .screen {
       margin-top: 14px;
     }
@@ -243,18 +254,124 @@
       background: #e9fff3;
     }
 
-    .wait-pick-wrap {
+    .wait-lobby-main {
       width: 100%;
+      min-height: 100%;
       display: grid;
-      gap: 12px;
-      align-content: start;
+      grid-template-columns: minmax(0, 1.7fr) minmax(260px, 0.8fr);
+      gap: clamp(14px, 2.6vw, 30px);
+      align-items: stretch;
     }
 
-    .wait-pick-head {
+    .wait-blook-board {
+      background: rgba(138, 57, 173, 0.96);
+      border: 8px solid rgba(157, 71, 194, 0.9);
+      border-radius: 14px;
+      padding: 18px;
+      box-shadow: 0 8px 0 rgba(57, 16, 79, 0.32);
+      min-height: 0;
+      display: grid;
+    }
+
+    .wait-blook-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(72px, 1fr));
+      gap: 10px;
+      align-content: start;
+      max-height: min(72vh, 700px);
+      overflow: auto;
+      padding-right: 6px;
+    }
+
+    .wait-blook-tile {
+      border: 0;
+      border-radius: 12px;
+      background: rgba(255, 255, 255, 0.18);
+      display: grid;
+      place-items: center;
+      aspect-ratio: 1 / 1;
+      padding: 6px;
+      cursor: pointer;
+      box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.15);
+      transition: transform 0.12s ease, filter 0.12s ease, background 0.12s ease;
+    }
+
+    .wait-blook-tile img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      border-radius: 8px;
+    }
+
+    .wait-blook-tile:hover {
+      transform: translateY(-1px);
+      filter: brightness(1.04);
+    }
+
+    .wait-blook-tile.is-current {
+      background: rgba(255, 255, 255, 0.35);
+      box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.18), 0 0 0 3px rgba(255, 255, 255, 0.75);
+    }
+
+    .wait-blook-tile.is-taken {
+      opacity: 0.42;
+      filter: grayscale(0.8);
+      cursor: not-allowed;
+    }
+
+    .wait-selected-panel {
+      display: grid;
+      align-content: center;
+      justify-items: center;
+      gap: 18px;
+      min-height: 0;
+    }
+
+    .wait-selected-card {
+      width: min(100%, 420px);
+      border-radius: 16px;
+      border: 6px solid rgba(255, 255, 255, 0.68);
+      background: linear-gradient(180deg, #f5f099 0%, #88d250 100%);
+      box-shadow: 0 10px 0 rgba(0, 0, 0, 0.22);
+      padding: 22px 18px;
+      display: grid;
+      gap: 12px;
+      justify-items: center;
+    }
+
+    .wait-selected-image {
+      width: min(80%, 250px);
+      aspect-ratio: 1 / 1;
+      border-radius: 20px;
+      background: rgba(255, 255, 255, 0.28);
+      padding: 8px;
+      display: grid;
+      place-items: center;
+      box-shadow: inset 0 -6px 0 rgba(0, 0, 0, 0.15);
+    }
+
+    .wait-selected-image img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      border-radius: 14px;
+    }
+
+    .wait-selected-name {
+      font-family: "Baloo 2", cursive;
+      color: #fff;
+      font-size: clamp(1.3rem, 2vw, 2rem);
+      font-weight: 800;
+      line-height: 1;
+      text-shadow: 0 3px 0 rgba(0, 0, 0, 0.2);
       text-align: center;
-      color: #284a66;
+    }
+
+    .wait-host-pill {
+      color: #fff;
+      font-size: clamp(1.2rem, 2.1vw, 2.4rem);
       font-weight: 900;
-      font-size: clamp(1.1rem, 2vw, 1.9rem);
+      text-shadow: 0 3px 0 rgba(0, 0, 0, 0.2);
     }
 
     .custom-editor {
@@ -852,14 +969,21 @@
       display: none;
     }
 
+    #playerGame {
+      margin-top: 0;
+    }
+
     .player-shell {
-      border-radius: 16px;
+      min-height: 100vh;
+      border-radius: 0;
       overflow: hidden;
-      box-shadow: var(--shadow);
-      border: 4px solid rgba(255, 255, 255, 0.7);
-      background: #e2e2e2;
-      max-width: 1240px;
-      margin: 0 auto;
+      border: 0;
+      background: #dedede;
+      max-width: none;
+      margin: 0;
+      display: grid;
+      grid-template-rows: auto auto auto auto;
+      align-content: start;
     }
 
     .play-hud {
@@ -867,11 +991,12 @@
       grid-template-columns: 1fr auto 1fr;
       align-items: center;
       gap: 10px;
-      padding: 10px 16px;
-      background: linear-gradient(180deg, var(--purple) 0%, var(--purple-dark) 100%);
+      min-height: 62px;
+      padding: 8px 14px;
+      background: linear-gradient(180deg, #9f52c1 0%, #8f46b2 100%);
       color: #fff;
-      font-size: clamp(1rem, 1.7vw, 2rem);
-      border-bottom: 4px solid rgba(45, 9, 62, 0.45);
+      font-size: clamp(1rem, 1.4vw, 1.9rem);
+      border-bottom: 4px solid rgba(68, 21, 91, 0.55);
     }
 
     .play-hud.is-correct {
@@ -898,25 +1023,29 @@
 
     .hud-center {
       font-weight: 900;
-      letter-spacing: 0.6px;
-      text-transform: uppercase;
+      letter-spacing: 0.3px;
       text-align: center;
       min-width: 150px;
+      font-size: clamp(1.2rem, 2.2vw, 2.4rem);
+      font-family: "Baloo 2", cursive;
     }
 
     .hud-chip {
-      border: 2px solid rgba(255, 255, 255, 0.38);
-      border-radius: 8px;
-      padding: 2px 7px;
-      font-size: 0.75rem;
-      letter-spacing: 0.4px;
-      background: rgba(255, 255, 255, 0.15);
+      display: inline-grid;
+      place-items: center;
+      min-width: 20px;
+      font-size: 1.15rem;
+      line-height: 1;
+      border: 0;
+      background: transparent;
+      padding: 0;
+      font-weight: 900;
     }
 
     .question-stage {
       background: #dedede;
       padding: clamp(16px, 3vw, 34px) clamp(16px, 3vw, 42px);
-      min-height: clamp(260px, 36vh, 390px);
+      min-height: clamp(220px, 34vh, 430px);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -954,10 +1083,10 @@
     }
 
     .question-title {
-      font-size: clamp(2rem, 4vw, 4rem);
+      font-size: clamp(2rem, 3.6vw, 4rem);
       line-height: 1.08;
       color: #3c3f45;
-      font-weight: 700;
+      font-weight: 600;
       margin: 0;
       text-align: center;
     }
@@ -1272,14 +1401,16 @@
       font-weight: 800;
       padding: 10px;
       background: rgba(255, 255, 255, 0.55);
+      margin: 0;
     }
 
     .answer-grid {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: 10px;
-      padding: 10px;
-      background: #9a6f2f;
+      gap: 8px;
+      padding: 8px;
+      background: #e6e6e6;
+      min-height: clamp(280px, 42vh, 520px);
     }
 
     .answer-tile {
@@ -1385,6 +1516,28 @@
       min-height: 72px;
     }
 
+    .answer-grid:empty {
+      display: none;
+    }
+
+    .player-shell.is-waiting {
+      background:
+        linear-gradient(180deg, #1dbfd0 0%, #1cb5c7 60%, #32b7d3 100%);
+    }
+
+    .player-shell.is-waiting .question-stage {
+      background: transparent;
+      min-height: calc(100vh - 66px);
+      align-items: stretch;
+      padding: clamp(10px, 2vw, 22px);
+    }
+
+    .player-shell.is-waiting .answer-feedback,
+    .player-shell.is-waiting #playerMeta,
+    .player-shell.is-waiting #playerStatus {
+      display: none !important;
+    }
+
     .feedback-icon {
       width: 42px;
       height: 42px;
@@ -1426,6 +1579,15 @@
 
       .lobby-stage-top {
         justify-content: center;
+      }
+
+      .wait-lobby-main {
+        grid-template-columns: 1fr;
+      }
+
+      .wait-blook-grid {
+        grid-template-columns: repeat(auto-fill, minmax(62px, 1fr));
+        max-height: 46vh;
       }
 
       .prompt-wrap {
@@ -1646,14 +1808,15 @@
       <div class="player-shell">
         <div class="play-hud">
           <div class="hud-left">
-            <span class="hud-chip">SND</span>
+            <span class="hud-chip">&#128266;</span>
             <span id="playerHudName">user123</span>
           </div>
           <div id="playerHudResult" class="hud-center"></div>
           <div class="hud-right">
             <span id="playerHudGold">0</span>
-            <span class="hud-chip">TOK</span>
-            <span class="hud-chip">BAG</span>
+            <span class="hud-chip">&#9760;</span>
+            <span class="hud-chip">&#9612;&#9612;&#9612;</span>
+            <span class="hud-chip">&#9881;</span>
           </div>
         </div>
         <div id="questionPanel" class="question-stage"></div>
