--- a/pages/lobby.html
+++ b/pages/lobby.html
@@ -363,7 +363,7 @@
         <div class="blook-preview">
           <div class="preview-blook-name" id="previewName">Select a Blook</div>
           <div class="preview-image" id="previewImage">
-            <img src="/pfp/Alpaca.svg" alt="Select a blook" />
+            <img src="/pfp/Atlas.svg" alt="Select a blook" />
           </div>
         </div>
 
