--- a/pages/fishingfrenzyhost.html
+++ b/pages/fishingfrenzyhost.html
@@ -136,6 +136,9 @@
 
     .left-board {
       min-height: 0;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
     }
 
     .right-stack {
@@ -150,11 +153,15 @@
       display: grid;
       gap: 12px;
       width: 100%;
-      height: auto;
-      max-height: 100%;
+      height: 100%;
+      min-height: 0;
+      max-height: none;
       overflow: auto;
       padding-right: 3px;
       align-content: start;
+      overscroll-behavior: contain;
+      scrollbar-gutter: stable both-edges;
+      -webkit-overflow-scrolling: touch;
     }
 
     .rank-row {
@@ -1126,6 +1133,7 @@
       }
 
       .host-wrap { height: auto; min-height: calc(100vh - 78px); overflow-y: auto; }
+      .left-board { height: clamp(260px, 54vh, 600px); }
       .right-inner { min-height: 280px; }
       .bottom-gold { margin-top: 2px; }
       .end-podium-wrap { top: clamp(120px, 22vh, 210px); }
@@ -1138,6 +1146,7 @@
       .rank-inner { grid-template-columns: 96px 56px 1fr auto; gap: 8px; padding: 0 10px; min-height: 78px; }
       .rank-avatar { width: 48px; height: 48px; border-radius: 10px; }
       .host-wrap { height: auto; min-height: calc(100vh - 78px); }
+      .left-board { height: clamp(230px, 46vh, 520px); }
       .end-corner-actions { top: 8px; right: 8px; }
       .end-btn { padding: 8px 10px; font-size: 0.92rem; }
       .end-title { top: 48px; }
